untitled.css
/*✱fonts*/
@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Asap:400,500,600,700|PT+Sans:400,700);

/*✱text*/
html {
    font-family: "Open Sans", Open Sans, sans-serif;
    background-color: rgb(250, 250, 250);
    margin:0;
    padding:0;
    box-sizing: border-box;
}
html * {
    transition: 0.5s ease;
}
body {
    margin: 0;
    /*    border-top: 5px solid white;*/
    /*    border-bottom: 3px solid lightpink;*/
}
h1 {
    font-family: 'Open Sans', sans-serif;
    font-weight: 600;
    text-align: center;
    font-size: 1.8em;
    display: block;
    padding-top: 100px;
    padding-left: 10%;
    padding-right: 10%;
}
h2 {
    font-family: 'Open Sans', sans-serif;
    font-weight: 600;
    text-align: center;
    font-size: 1.8em;
    display: block;
    padding-top: 50px;
    padding-left: 10%;
    padding-right: 10%;
    font-weight: bold;
}
h3 {
    font-family: 'Arvo', serif;
    text-align: left;
    font-size: 1.5proem;
    color: darkgray;
    margin: auto;
    margin-left: 25%;
    max-width: 25%;
    float: left;
}
h4 {
    font-size: 1.5em;
    font-family: 'Arvo', serif;
    color: black;
    text-align: center;
    display: block;
    /*    width: 25%;*/
    /*        flex: 10%;*/
    /*    max-width: 640px;*/
}
p {
    margin: 0;
    padding: none;
}
section {
    flex-direction: row;
    font-family: 'Asap', sans-serif;
    font-size: 12pt;
    font-weight: 400;
    max-width: 550px;
    margin: none;
    margin-left: 40%;
    padding-bottom: 50px;
    color: darkgray;
    line-height: 1.4;
}
.prompt {
    float: center;
    margin: auto;
    padding: 50px 0 0 0;
}
.center {
    margin-left: 33.3%;
}
.subtitle {
    font-family: 'Asap', sans-serif;
    font-size: 16px;
    color: dimgray;
    float: center;
    text-align: center;
    padding-bottom: 50px;
    padding-right: 10%;
    padding-left: 10%;
    font-weight: 500;
    line-height: 1.4;
}
.bottomlink {
    font-family: 'Asap', sans-serif;
    font-size: 14px;
    padding-left: 10%;
    padding-right: 10%;
    font-weight: 500;
    color: dimgray;
}
.bottomlink a, .bottomlink a:visited {
    font-family: 'Asap', sans-serif;
    font-size: 14px;
    color: dimgray;
    text-decoration: none;
    font-weight: 500;
/*    display: flex;*/
/*    float: center;*/
}
.bottomlink a:hover {
    letter-spacing: 5px;
    color: black;
}
.processheader {
    line-height: 1.4;
    font-family: 'Asap', sans-serif;
    font-weight: 500;
    text-transform: lowercase;
    text-align: left;
    margin-left: 30%;
    max-width: 30%;
    float: left;
    color: dimgray;
}
.bookmark {
    color: gainsboro;
    font-family: 'Open Sans', sans-serif;
    font-weight: bold;
    text-align: center;
    padding-bottom: 0px;
    padding-right: 10%;
    padding-left: 10%;
}
.body {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    text-align: left;
    padding-bottom: 0px;
}
.title {
    font-family: "Asap", Asap, sans-serif;
    text-align: center;
    font-size: 14px;
    color: darkgray;
    margin: auto;
    display: block;
    padding-top: 18px;
}
span .title {
    margin-top: 65px;
}
figcaption {
    font-family: "Asap", Asap, sans-serif;
    font-weight: 500;
    text-align: center;
    font-size: 14px;
    color: dimgray;
    margin: auto;
    display: block;
    padding-top: 15px;
    padding-bottom: 50px;
}
.spacer {
    padding-top: 90px;
    padding-bottom: 90px;
    color: black;
    display: block;
    text-align: center;
}
ol li {
    padding-top: 10px;
}
@media screen and (max-width: 700px) {
    section.prompt {
        padding: 50px;
    }
}
/*-----------------------------------------------*/
/*✱links*/

a {
    color: #6fa8dc;
    color: lightskyblue;
}
a:visited {
    color: plum;
}

/*-----------------------------------------------*/
/*✱landing page*/
iframe.landing {
    width: 100%;
    height: 885px;
    overflow: hidden;
}
iframe.landing:hover {
    
}
.herotext {
    position: absolute;
/*    position: fixed;*/
    top: 24%;
    width: 100%;
/*    height: 100%;*/
/*    z-index: -5;*/
}

/*-----------------------------------------------*/
/*✱navbar*/

nav ul {
    list-style-type: none;
    margin: 0px;
    overflow: hidden;
    color: black;
    padding: 0 8% 0 8%;
    transition: 1s ease;
}
nav ul li {
    float: left;
    font-size: 16px;
    color: black;
    padding: 50px 0 50px 50px;
}
nav ul li:first-child {
    padding-left: 0;
}
ul div {
    float: right;
}
ul li a {
    font-family: Asap;
    font-size: 14px;
    font-weight: 500;
    text-transform: lowercase;
    text-decoration: none;
    transition: .5s ease-out;
    text-align: center;
    color: darkgray;
}
ul li a:hover:not(.active) {
    letter-spacing: 5px;
    color: dimgray;
    transition: .5s ease-out;
}
ul li a:visited {
    color: darkgray;
}
ul li a.active {
    color: black;
    letter-spacing: 5px;
}
#favicon {
    width: 25px;
    height: auto;
}

nav a#hamburger {
    width: 22px;
    height: 22px;
    z-index: -2;
    float: right;
    position: fixed;
    top: 50px;
    right: 8%;
    transition: 1s ease;
    opacity: 0;
}

nav ul div.visible {
    opacity: 1;
    z-index: 1;
}

nav a#hamburger div {
    height: 2px;
    width: 2em;
    background-color: black;
}

nav a#hamburger div:nth-child(1) {
    position: absolute;
    transition: 1s ease;
    top: 0px;
}

nav a#hamburger div:nth-child(2) {
    position: absolute;
    top: 10px;
    transition: 1s ease;
}

nav a#hamburger div:nth-child(3) {
    position: absolute;
    top: 20px;
    transition: 1s ease;
}
.blur {
    opacity: 0.2;
    transition: .5s ease;
    overflow: hidden;
    filter: blur(1.5rem);
}
main {
    transition: .5s ease;
}
@media screen and (max-width:1200px) {
    nav ul li {
        padding: 50px 16% 50px 0;
    }
    nav ul div {
        display: flex; 
        flex-direction: column;
        text-align: center;
        padding-bottom: 0px
        vertical-align: middle;
        width: 100%;
        position: fixed;
        top: 24%;
        opacity: 0;
    }
    nav a#hamburger {
    z-index: 2;
    opacity: 1;
}
    nav a#hamburger.x div:nth-child(1) {
        position: absolute;
        top: 10px;
        transform: rotate(45deg);
        transform-origin: center center;
        background-color: black;
        transition: 1s ease;
    }
    nav a#hamburger.x div:nth-child(2) {
        position: absolute;
        opacity: 0;
        background-color: black;
        transition: 1s ease;
    }
    nav a#hamburger.x div:nth-child(3) {
        position: absolute;
        top: 10px;
        transform: rotate(-45deg);
        transform-origin: center center;
        background-color: black;
        transition: 1s ease;
    }
}

/*-----------------------------------------------*/
/*✱footer*/

iframe.footer {
    background-color: white;
    width: 100%;
    height: 160px;
    color: black;
}

/*-----------------------------------------------*/
/*✱HOME GALLERY STYLE*/
.home {
    column-count: 2;
    column-gap: 25px;
    padding-left: 8%;
    padding-right: 8%;
    max-width: 100%;
}
.home3 {
    column-count: 3;
    padding-left: 8%;
    padding-right: 8%;
    max-width: 100%;
}
.home span, .home3 span {
    display: inline-block;
    padding: 0px;
    padding-bottom: 20px;
    position: relative;
}
.home img, .home video, .home3 img, .home3 video {
    width: 100%;
    height: 100%;
    vertical-align: middle;
    transition: .5s ease;
}
.home .container:hover img, .home .container:hover video, .home .container:hover iframe, .home3 .container:hover img, .home3 .container:hover video, .home3 .container:hover iframe {
    opacity: 0.2;
    transition: .5s ease;
    overflow: hidden;
    transform: scale(1.02);
    filter: blur(5px);
    
/*
    transform: perspective(1000px) rotateY(-5deg);
    transition: transform .3s;
*/
    
/*        box-shadow: -5px 5px 10px rgba(0,0,0,.1);*/
    /*
    filter:blur(1px);
    overflow: hidden;
    */
}
.home .title, .home3 .title {
    opacity: 0;
    text-align: center;
    color: black;
    font-weight: normal;
    position: absolute;
    top: 48.5%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -100%);
    text-align: center;
    padding: none;
    text-decoration: none;
    padding-bottom: 50px;
    line-height: 1.4;
}
.container:hover .title {
    transition: 1s ease;
    opacity: 1;
}
.home .container, .home3 .container {
    display: inline-block;
    overflow: hidden;
    position: relative;
    padding: none;
}
@media screen and (max-width: 1200px) {
    .home3 {
        column-count: 2;
    }
}
@media screen and (max-width: 1000px) {
    .home, .home3 {
        column-count: 1;
        padding-left: 10%;
        padding-right: 10%;
        max-width: 100%;
        display: block;
    }
}
@media screen and (max-width: 850px) {
    .home, .home3 {
        max-width: 100%;
        padding-left: 0px;
        padding-right: 0px;
    }
}
/*-----------------------------------------------*/
/*✱gallery style 1: single image*/

div.gallery {
    margin: 25px 0px 50px 0px;
    float: center;
}
div.gallery img {
    display: block;
    margin: auto;
    border: none;
    float: center;
}
.desc {
    padding-top: 14px;
    font-family: "Asap", Asap, sans-serif;
    text-align: center;
    font-size: 14px;
    color: darkgray;
    margin: auto;
    display: block;
    font-style: italic;
}
div.white {
    background-color: white;
}
iframe {
    display: block;
    margin: auto;
    border: none;
    float: center;
/*    padding-bottom: 15px;*/
}
@media screen and (max-width: 1330px) {
    img {
        width: 100%;
    }
}

/*-----------------------------------------------*/
/*✱gallery style 2: flexbox*/

* {
    box-sizing: border-box;
}
.row {
    display: flex;
    flex-wrap: wrap;
    padding-left: 10%;
    padding-right: 10%;
}
.column {
    flex: 25%;
    max-width: 25%;
}
.column2 {
    flex: 50%;
    max-width: 50%;
}
.column3 {
    flex: 33.33%;
    max-width: 33.33%;
}
.column img, .column2 img, .column3 img {
    padding: 2px;
    vertical-align: middle;
    width: 100%;
}
.column video, .column2 video, .column3 video {
    width: 100%;
    padding: 2px;
}
@media screen and (max-width: 1400px) {
    .column {
        flex: 33%;
        max-width: 33%;
    }
}
@media screen and (max-width: 1000px) {
    .column, .column3 {
        flex: 50%;
        max-width: 50%;
    }
}
@media screen and (max-width: 600px) {
    .column, .column2, .column3 {
        flex: 100%;
        max-width: 100%;
    }
}

/*-----------------------------------------------*/
/*✱gallery style 3: seamless photo grid*/

.grid {
    /*    display: grid;*/
    line-height: 0;
    /*    grid-template-columns: auto auto auto;*/
    column-count: 3;
    column-gap: 4px;
    float: center;
    padding-left: 10%;
    padding-right: 10%;
    font-family: 'Open Sans', sans-serif;
    grid-auto-flow: row;
    justify-content: center;
}

.grid img {
    width: 100% !important;
    height: auto !important;
    padding-top: 4px;
    /*    display: inline-grid;*/
}

/*-----------------------------------------------*/
/*✱gallery style 4: seamless photo grid*/
/*

.grid2 {
padding-left: 10%;
padding-right: 10%;
display: grid;
grid-template-columns: repeat(auto-fit, minmax(1fr, 1fr));
grid-template-rows: 10%;
grid-column-gap: 4px;
grid-auto-flow: column;
}
.grid2 img {
width: 100% !important;
height: auto !important;
padding-top: 4px;
}
*/

